create: header in index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="header-top">
           <a href="#" class="logo">
             <img
-              src="img\horizontal-logo.svg"
+              src="img/horizontal-logo.svg"
               alt="logo: Best Tour Plan"
               class="logo__image"
             />
@@ -23,12 +23,12 @@
               placeholder="Search Location"
             />
             <button class="search__button">
-              <img src="search.svg" alt="icon: search" />
+              <img src="img/search.svg" alt="icon: search" />
             </button>
           </form>
           <a class="user">
             <img
-              src="user-avatar.jpg"
+              src="img/user-avatar.jpg"
               alt="avatar: Nathan"
               class="user__avatar"
             />
