--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Nunito:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="css/style.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header class="header">
+      <header class="header">
       <div class="container">
         <div class="header-top">
           <a href="#" class="logo">
@@ -67,6 +71,7 @@
           </ul>
         </nav>
       </div>
+      
       <!-- .container -->
     </header>
   </body>
