--- a/index.html
+++ b/index.html
@@ -1,78 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Best tour Plan - Hotel Booking</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Nunito:wght@400;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="css/style.css"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-      <header class="header">
-      <div class="container">
-        <div class="header-top">
-          <a href="#" class="logo">
-            <img
-              src="img/horizontal-logo.svg"
-              alt="logo: Best Tour Plan"
-              class="logo__image"
-            />
-          </a>
-          <form action="#" class="search">
-            <input
-              type="text"
-              class="search__input"
-              placeholder="Search Location"
-            />
-            <button class="search__button">
-              <img src="img/search.svg" alt="icon: search" />
-            </button>
-          </form>
-          <a class="user">
-            <img
-              src="img/user-avatar.jpg"
-              alt="avatar: Nathan"
-              class="user__avatar"
-            />
-            <span class="user__name">Nathan</span>
-          </a>
-          <!-- .user -->
-        </div>
-        <!-- .header-top -->
-        <nav class="menu">
-          <ul class="header-menu">
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">All Deals</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Hotels</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Activities</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Hotel Day Packages</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Restaurants</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Events</a>
-            </li>
-            <li class="header-menu__item">
-              <a href="#" class="header-menu__link">Rodrigues</a>
-            </li>
-          </ul>
-        </nav>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Best tour Plan - Hotel Booking</title>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Nunito:wght@400;600;700;800&display=swap"
+    rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="header-top">
+        <a href="#" class="logo">
+          <img src="img/horizontal-logo.svg" alt="logo: Best Tour Plan" class="logo__image" />
+        </a>
+        <form action="#" class="search header__search">
+          <input type="text" class="search__input" placeholder="Search Location" />
+          <button class="search__button">
+            <img src="img/search.svg" alt="icon: search" />
+          </button>
+        </form>
+        <a class="user">
+          <img src="img/user-avatar.jpg" alt="avatar: Nathan" class="user__avatar" />
+          <span class="user__name">Nathan</span>
+        </a>
+        <!-- .user -->
       </div>
-      
-      <!-- .container -->
-    </header>
-  </body>
+      <!-- .header-top -->
+      <nav class="menu">
+        <ul class="header-menu">
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">All Deals</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Hotels</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Activities</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Hotel Day Packages</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Restaurants</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Events</a>
+          </li>
+          <li class="header-menu__item">
+            <a href="#" class="header-menu__link">Rodrigues</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
+    <!-- .container -->
+  </header>
+</body>
+
 </html>
