create: mobile responsive for header

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <img src="img/search.svg" alt="icon: search" />
             </button>
           </form>
-          <a class="user">
+          <a class="user navbar__user">
             <img
               src="img/user-avatar.jpg"
               alt="avatar: Nathan"
@@ -41,6 +41,12 @@
             <span class="user__name">Nathan</span>
           </a>
           <!-- .user -->
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
+          <!-- /.navbar-menu__menu-btn -->
         </div>
         <!-- .navbar-top -->
       </div>
