--- a/index.html
+++ b/index.html
@@ -128,20 +128,32 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider">
+          <div class="slider hotel__slider">
             <!-- Slider main container -->
             <div class="swiper-container">
               <!-- Additional required wrapper -->
               <div class="swiper-wrapper">
                 <!-- Slides -->
                 <div class="swiper-slide">
-                  <img src="img/slide.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide2.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide2.jpg"
+                    alt="slide"
+                  />
                 </div>
                 <div class="swiper-slide">
-                  <img src="img/slide3.jpg" alt="slide" />
+                  <img
+                    class="swiper-slide__img"
+                    src="img/slide3.jpg"
+                    alt="slide"
+                  />
                 </div>
               </div>
               <!-- If we need navigation buttons -->
@@ -151,7 +163,7 @@
             <!-- /.swiper-container -->
           </div>
           <!-- /.slider -->
-          <div class="hotel-right">
+          <div class="block-info">
             <div class="booking">
               <div class="booking__info">
                 <div class="booking__price">
@@ -178,7 +190,7 @@
             <div class="map">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16040.148101505567!2d98.29184753284908!3d7.8378493740765265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1600779943877!5m2!1sru!2sru"
-                width="347"
+                width="100%"
                 height="213"
                 frameborder="0"
                 style="border: 0"
