--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Best tour Plan - Hotel Booking</title>
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&family=Nunito:wght@400;600;700;800&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link href="css/style.css" rel="stylesheet" />
+    <script
+      src="https://api-maps.yandex.ru/2.1/?apikey=34a96012-6aac-453d-a9b3-7faf311561d2&lang=ru_RU"
+      type="text/javascript"
+    ></script>
   </head>
 
   <body>
@@ -187,18 +192,7 @@
               <button class="button booking__button">View Other Options</button>
             </div>
             <!-- /.booking -->
-            <div class="map">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16040.148101505567!2d98.29184753284908!3d7.8378493740765265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1600779943877!5m2!1sru!2sru"
-                width="100%"
-                height="213"
-                frameborder="0"
-                style="border: 0"
-                allowfullscreen=""
-                aria-hidden="false"
-                tabindex="0"
-              ></iframe>
-            </div>
+            <div id="map-api" class="map"></div>
           </div>
           <!-- /.hotel-right -->
           <!-- /.map -->
@@ -210,5 +204,6 @@
     <!-- /.hotel -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/map.js"></script>
   </body>
 </html>
