create: added newsletter & responsive

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link href="css/style.css" rel="stylesheet" />
-    <script
-      src="https://api-maps.yandex.ru/2.1/?apikey=34a96012-6aac-453d-a9b3-7faf311561d2&lang=ru_RU"
-      type="text/javascript"
-    ></script>
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=34a96012-6aac-453d-a9b3-7faf311561d2&lang=ru_RU"></script>
   </head>
 
   <body>
@@ -108,11 +105,11 @@
           <div class="hotel-info__text">
             <div class="hotel-wrapper">
               <div class="stars">
-                <img src="img\star.svg" alt="star" class="star" />
-                <img src="img\star.svg" alt="star" class="star" />
-                <img src="img\star.svg" alt="star" class="star" />
-                <img src="img\star.svg" alt="star" class="star" />
-                <img src="img\star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
               </div>
               <h1 class="hotel-name hotel-info__name">GRAND HILTON HOTEL</h1>
               <span class="offer hotel-info__offer">Flash Offer</span>
@@ -202,6 +199,24 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+    <section class="newsletter">
+      <div class="newsletter-wrapper">
+        <h2 class="newsletter-title">
+          subscribe to our
+          <span class="newsletter-title__strong">Newsletter</span>
+        </h2>
+        <form action="#" class="subscribe newsletter__subscribe">
+          <input
+            type="text"
+            class="subscribe__input"
+            placeholder="Your email address"
+          />
+          <button class="subscribe__button">Send</button>
+        </form>
+      </div>
+      <!-- /.newsletter-wrapper -->
+    </section>
+    <!-- /.newsletter -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
