--- a/index.html
+++ b/index.html
@@ -130,41 +130,42 @@
         </div>
         <!-- /.hotel-info -->
         <div class="hotel-grid">
-          <div class="slider hotel__slider">
-            <!-- Slider main container -->
-            <div class="swiper-container">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide2.jpg"
-                    alt="slide"
-                  />
-                </div>
-                <div class="swiper-slide">
-                  <img
-                    class="swiper-slide__img"
-                    src="img/slide3.jpg"
-                    alt="slide"
-                  />
-                </div>
+          <!-- Slider main container -->
+          <div class="swiper-container hotel__slider hotel-slider">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide.jpg"
+                  alt="slide"
+                />
               </div>
-              <!-- If we need navigation buttons -->
-              <button class="slider-button slider-button__next"></button>
-              <button class="slider-button slider-button__prev"></button>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide2.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide hotel-slider__item">
+                <img
+                  class="swiper-slide__img"
+                  src="img/slide3.jpg"
+                  alt="slide"
+                />
+              </div>
             </div>
-            <!-- /.swiper-container -->
+            <!-- If we need navigation buttons -->
+            <button
+              class="hotel-slider__button hotel-slider__button__next"
+            ></button>
+            <button
+              class="hotel-slider__button hotel-slider__button__prev"
+            ></button>
           </div>
-          <!-- /.slider -->
+          <!-- /.swiper-container -->
           <div class="block-info">
             <div class="booking">
               <div class="booking__info">
@@ -217,6 +218,101 @@
       <!-- /.newsletter-wrapper -->
     </section>
     <!-- /.newsletter -->
+    <section class="reviews">
+      <div class="container">
+        <h2 class="reviews__title">What people thinks about us</h2>
+        <!-- Slider main container -->
+        <div class="swiper-container reviews-slider">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
+            <!-- Slides -->
+            <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar.jpg"
+                    alt="Photo: Megan Fox"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__user-name">Megan Fox</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                  </div>
+                  <!--/.assessment-->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+                <!-- /.reviews-slider__text -->
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!--/.swiper-slide-->
+                 <div class="swiper-slide">
+              <div class="reviews-slider__item">
+                <div class="reviews-slider__profile">
+                  <img
+                    src="img/reviews-avatar2.jpg"
+                    alt="Photo: Emma Watson"
+                    class="reviews-slider__avatar"
+                  />
+                  <h3 class="reviews-slider__user-name">Emma Watson</h3>
+                  <span class="reviews-slider__date">Stayed 18 Nov, 2019</span>
+                  <div class="reviews-slider__rating">
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                    <img src="img/star.svg" alt="star" class="star" />
+                  </div>
+                  <!--/.assessment-->
+                </div>
+                <!-- /.reviews-slider__profile -->
+                <p class="reviews-slider__text">
+                  It was very nice hotel with cleanliness. Staff behavior was
+                  good and polite. They welcome us very well. Issue was only
+                  that Lift was not in working and we were allotted to 3rd floor
+                  and amenities articles were in corner of gallery which were
+                  giving bad feeling. Breakfast was good and support of the
+                  staff was also very nice. Location is not good as per
+                  atmosphere, it is very nearby most of the popular places but
+                  self location in a narrow street is not good. Overall it was a
+                  good experience and could recommend.
+                </p>
+                <!-- /.reviews-slider__text -->
+              </div>
+              <!-- /.reviews-slider__item -->
+            </div>
+            <!--/.swiper-slide-->
+          </div>
+          <!--/.swiper-wrapper-->
+          <!-- If we need navigation buttons -->
+          <button
+            class="reviews-slider__button reviews-slider__button__prev"
+          ></button>
+          <button
+            class="reviews-slider__button reviews-slider__button__next"
+          ></button>
+        </button>
+        <!--/.reviews-slider-->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.reviews -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/map.js"></script>
