--- a/index.html
+++ b/index.html
@@ -136,22 +136,18 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
-                <img
-                  class="swiper-slide__img"
-                  src="img/slide.jpg"
-                  alt="slide"
-                />
+                <img class="hotel-slide__img" src="img/slide.jpg" alt="slide" />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slide__img"
                   src="img/slide2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="swiper-slide__img"
+                  class="hotel-slide__img"
                   src="img/slide3.jpg"
                   alt="slide"
                 />
@@ -262,7 +258,7 @@
               <!-- /.reviews-slider__item -->
             </div>
             <!--/.swiper-slide-->
-                 <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="reviews-slider__item">
                 <div class="reviews-slider__profile">
                   <img
@@ -307,8 +303,8 @@
           <button
             class="reviews-slider__button reviews-slider__button__next"
           ></button>
-        </button>
-        <!--/.reviews-slider-->
+          <!--/.reviews-slider-->
+        </div>
       </div>
       <!-- /.container -->
     </section>
