--- a/index.html
+++ b/index.html
@@ -196,7 +196,11 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
-    <section class="newsletter">
+    <section
+      class="newsletter"
+      data-parallax="scroll"
+      data-image-src="img/newletter-bg.jpg"
+    >
       <div class="newsletter-wrapper">
         <h2 class="newsletter-title">
           subscribe to our
@@ -311,6 +315,8 @@
     <!-- /.reviews -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>
     <script src="js/map.js"></script>
   </body>
 </html>
