--- a/index.html
+++ b/index.html
@@ -313,6 +313,23 @@
       <!-- /.container -->
     </section>
     <!-- /.reviews -->
+    <section class="activities">
+      <div class="container">
+        <h2 class="activities__title">Other Activities</h2>
+        <div class="activities-wrapper">
+          <div class="card">
+            <img src="" alt="" class="card__image" />
+            <h3 class="card__title">The curious corner of chamarel</h3>
+            <button class="card__button"></button>
+          </div>
+          <!--/.card-->
+        </div>
+        <!-- /.activities-wrapper -->
+        <!-- /.activities-title -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.activities -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
