create: add Other Packages section + adaptive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="css/style.css" rel="stylesheet" />
     <script src="https://api-maps.yandex.ru/2.1/?apikey=34a96012-6aac-453d-a9b3-7faf311561d2&lang=ru_RU"></script>
   </head>
-
   <body>
     <header class="navbar">
       <div class="container">
@@ -136,18 +135,22 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide hotel-slider__item">
-                <img class="hotel-slide__img" src="img/slide.jpg" alt="slide" />
+                <img
+                  class="hotel-slider__img"
+                  src="img/slide.jpg"
+                  alt="slide"
+                />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide2.jpg"
                   alt="slide"
                 />
               </div>
               <div class="swiper-slide hotel-slider__item">
                 <img
-                  class="hotel-slide__img"
+                  class="hotel-slider__img"
                   src="img/slide3.jpg"
                   alt="slide"
                 />
@@ -196,6 +199,242 @@
       <!-- /.container -->
     </section>
     <!-- /.hotel -->
+
+    <section class="packages">
+      <div class="container">
+        <h2 class="packages__title">Other Packages</h2>
+        <div class="packages-wrapper">
+          <div class="packages-item first">
+            <span class="offer packages__offer first__offer">Flash Offer</span>
+            <!-- /.offer -->
+            <img
+              src="img/pack-1.jpg"
+              alt="packages"
+              class="packages-item__img first__img"
+            />
+            <div class="packages-item__text first__text">
+              <div class="info">
+                <div class="packages-item__rating first__rating">
+                  <img src="img/star.svg" alt="star" class="star" />
+                  <img src="img/star.svg" alt="star" class="star" />
+                  <img src="img/star.svg" alt="star" class="star" />
+                  <img src="img/star.svg" alt="star" class="star" />
+                  <img src="img/star.svg" alt="star" class="star" />
+                </div>
+                <h3 class="packages-item__title first__title">
+                  Hotel Blue Haven
+                </h3>
+              </div>
+              <p class="packages-item__description first__description">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <!-- /.packages__description -->
+              <div class="packages-item__person-room first__person">
+                <span class="packages__info">1749 Wheeler Ridge Delaware</span>
+                <span class="packages__info">2 x Guests</span>
+                <span class="packages__info">1 x Room</span>
+              </div>
+              <!-- /.person-room -->
+              <div class="packages__order">
+                <div class="packages__price">
+                  <span class="packages__old-cost">$ 10,500</span>
+                  <span class="packages__cost"> $ 8,500</span>
+                </div>
+                <!-- /.packages__price -->
+                <button class="packages__button">Book Now</button>
+              </div>
+              <!-- /.packages__order -->
+            </div>
+            <!--/.packages-text-->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages-item">
+            <span class="offer packages__offer">Flash Offer</span>
+            <!-- /.offer -->
+            <img
+              src="img/pack-2.jpg"
+              alt="Hotel: LUX* Belle Mare"
+              class="packages-item__img"
+            />
+            <div class="packages-item__text">
+              <div class="packages-item__rating">
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+              </div>
+              <h3 class="packages-item__title">LUX* Belle Mare</h3>
+              <p class="packages-item__description">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <!-- /.packages__description -->
+              <div class="packages-item__person-room">
+                <span class="packages__info">1749 Wheeler Ridge Delaware</span>
+                <span class="packages__info">2 x Guests</span>
+                <span class="packages__info">1 x Room</span>
+              </div>
+              <!-- /.person-room -->
+              <div class="packages__order">
+                <div class="packages__price">
+                  <span class="packages__old-cost">$ 8,500</span>
+                  <span class="packages__cost">$ 3,000</span>
+                </div>
+                <!-- /.packages__price -->
+                <button class="packages__button">Book Now</button>
+              </div>
+              <!-- /.packages__order -->
+            </div>
+            <!--/.packages-text-->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages-item">
+            <span class="offer packages__offer">Flash Offer</span>
+            <!-- /.offer -->
+            <img
+              src="img/pack-3.jpg"
+              alt="Hotel: White Palace"
+              class="packages-item__img"
+            />
+            <div class="packages-item__text">
+              <div class="packages-item__rating">
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+              </div>
+              <h3 class="packages-item__title">White Palace</h3>
+              <p class="packages-item__description">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <!-- /.packages__description -->
+              <div class="packages-item__person-room">
+                <span class="packages__info">1749 Wheeler Ridge Delaware</span>
+                <span class="packages__info">2 x Guests</span>
+                <span class="packages__info">1 x Room</span>
+              </div>
+              <!-- /.person-room -->
+              <div class="packages__order">
+                <div class="packages__price">
+                  <span class="packages__old-cost">$ 10,500</span>
+                  <span class="packages__cost">$ 9,500</span>
+                </div>
+                <!-- /.packages__price -->
+                <button class="packages__button">Book Now</button>
+              </div>
+              <!-- /.packages__order -->
+            </div>
+            <!--/.packages-text-->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages-item">
+            <span class="offer packages__offer">Flash Offer</span>
+            <!-- /.offer -->
+            <img
+              src="img/pack-4.jpg"
+              alt="Hotel: Luxury Place"
+              class="packages-item__img"
+            />
+            <div class="packages-item__text">
+              <div class="packages-item__rating">
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+              </div>
+              <h3 class="packages-item__title">Luxury Place</h3>
+              <p class="packages-item__description">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <!-- /.packages__description -->
+              <div class="packages-item__person-room">
+                <span class="packages__info">1749 Wheeler Ridge Delaware</span>
+                <span class="packages__info">2 x Guests</span>
+                <span class="packages__info">1 x Room</span>
+              </div>
+              <!-- /.person-room -->
+              <div class="packages__order">
+                <div class="packages__price">
+                  <span class="packages__old-cost">$ 4,500</span>
+                  <span class="packages__cost">$ 2,500</span>
+                </div>
+                <!-- /.packages__price -->
+                <button class="packages__button">Book Now</button>
+              </div>
+              <!-- /.packages__order -->
+            </div>
+            <!--/.packages-text-->
+          </div>
+          <!-- /.packages__item -->
+          <div class="packages-item">
+            <span class="offer packages__offer">Flash Offer</span>
+            <!-- /.offer -->
+            <img
+              src="img/pack-5.jpg"
+              alt="Hotel: Hotel Five Star"
+              class="packages-item__img"
+            />
+            <div class="packages-item__text">
+              <div class="packages-item__rating">
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+                <img src="img/star.svg" alt="star" class="star" />
+              </div>
+              <h3 class="packages-item__title">Hotel Five Star</h3>
+              <p class="packages-item__description">
+                Aute quis duis excepteur excepteur ipsum cat eiusmod consectetur
+                enim laborum magna llit. Ipsum est fugiat velit ea llamco do
+                esse ut in veniam sun in onsequat. Aute quis duis epteur
+                excepteur ipsum occaecat eiusmod nsectetur enim laborum magna
+                mollit. Ipsum est fugiat velit ea ullamco do
+              </p>
+              <!-- /.packages__description -->
+              <div class="packages-item__person-room">
+                <span class="packages__info">1749 Wheeler Ridge Delaware</span>
+                <span class="packages__info">2 x Guests</span>
+                <span class="packages__info">1 x Room</span>
+              </div>
+              <!-- /.person-room -->
+              <div class="packages__order">
+                <div class="packages__price">
+                  <span class="packages__old-cost">$ 6,500</span>
+                  <span class="packages__cost">$ 3,500</span>
+                </div>
+                <!-- /.packages__price -->
+                <button class="packages__button">Book Now</button>
+              </div>
+              <!-- /.packages__order -->
+            </div>
+            <!--/.packages-text-->
+          </div>
+          <!-- /.packages__item -->
+        </div>
+        <!-- /.packages-wrapper -->
+      </div>
+      <!--/.container-->
+    </section>
+    <!-- /.packages -->
+
     <section
       class="newsletter"
       data-parallax="scroll"
